--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
       "@errors": ["src/errors"],
       "@entities": ["src/db/entities"],
       // Remember to update when adding new resource
-      "@sample": ["src/sample"]
+      "@crypto": ["src/crypto"],
+      "@accounts": ["src/accounts"]
     }
   }
 }
