--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,8 @@ DB_USER=root
 DB_PASS=Longquadeptrai@123
 
 KEY_PAIR_FOLDER=keys
+HMAC_SECRET=longratdeptrai
+
+JWT_SECRET=longmetmoivcl
+JWT_ISSUER=longdeptraichuconaivaodaynua
+JWT_EXPIRE=2h
