--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
       "@entities": ["src/db/entities"],
       // Remember to update when adding new resource
       "@crypto": ["src/crypto"],
-      "@accounts": ["src/accounts"]
+      "@accounts": ["src/accounts"],
+      "@auth": ["src/auth"]
     }
   }
 }
