--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ HMAC_SECRET=longratdeptrai
 JWT_SECRET=longmetmoivcl
 JWT_ISSUER=longdeptraichuconaivaodaynua
 JWT_EXPIRE=2h
+
+GOOGLE_CLIENT_ID=client_id
+GOOGLE_CLIENT_SECRET=client_secret
