--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
       // Remember to update when adding new resource
       "@crypto": ["src/crypto"],
       "@accounts": ["src/accounts"],
-      "@auth": ["src/auth"]
+      "@auth": ["src/auth"],
+      "@local-files": ["src/local-files"]
     }
   }
 }
