--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
+    "firebase": "^10.8.1",
     "google-auth-library": "^9.6.3",
     "googleapis": "^133.0.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "1.4.5-lts.1",
     "mysql2": "^3.9.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
@@ -48,6 +50,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
