--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
       "@accounts": ["src/accounts"],
       "@auth": ["src/auth"],
       "@local-files": ["src/local-files"],
-      "@posts": ["src/posts"]
+      "@posts": ["src/posts"],
+      "@relationships": ["src/relationships"]
     }
   }
 }
